feat: add an example with multiple stop colours

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <span class="box lavender" title="lavender"></span>
     <span class="box corporate" title="corporate"></span>
     <span class="box peach" title="peach"></span>
+    <span class="box yummy" title="yummy"></span>
   </div>
   
   <div id="demo" class="windfall">
