feat: add some cool ones that i made with https://aimeerivers.github.io/gradient-painter/

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
   <div>
     <span class="box windfall" title="windfall"></span>
     <span class="box party" title="party"></span>
+    <span class="box swishy" title="swishy"></span>
+    <span class="box sunray" title="sunray"></span>
     <span class="box spotlights" title="spotlights"></span>
     <span class="box showdown" title="showdown"></span>
+    <span class="box fresh" title="fresh"></span>
+    <span class="box bubbles" title="bubbles"></span>
     <span class="box dusky" title="dusky"></span>
     <span class="box jupiter" title="jupiter"></span>
     <span class="box juice" title="juice"></span>
