feat: add a footer that links to the gradient painter

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fancy Gradients</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <h1>Fancy Gradients</h1>
   <p>Choose a fancy gradient style</p>
@@ -28,10 +30,18 @@
     <span class="box peach" title="peach"></span>
     <span class="box yummy" title="yummy"></span>
   </div>
-  
-  <div id="demo" class="windfall">
 
-  </div>
+  <div id="demo" class="windfall"></div>
+
+  <h2>CSS</h2>
+  <pre id="cssOutput"></pre>
+
+  <footer>
+    <p>want to design your own? take a look at <a href="https://aimeerivers.github.io/gradient-painter/">Gradient
+        Painter</a> and let your creativity loose!</p>
+  </footer>
+
   <script src="js/script.js"></script>
 </body>
+
 </html>
