--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Choose a fancy gradient style</p>
 
   <div>
-    <span class="box windfall" title="windfall"></span>
+    <span class="box windfall active" title="windfall"></span>
     <span class="box party" title="party"></span>
     <span class="box swishy" title="swishy"></span>
     <span class="box sunray" title="sunray"></span>
