feat: come on i need to sleep

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <span class="box showdown" title="showdown"></span>
     <span class="box fresh" title="fresh"></span>
     <span class="box bubbles" title="bubbles"></span>
+    <span class="box wow" title="wow"></span>
     <span class="box dusky" title="dusky"></span>
     <span class="box jupiter" title="jupiter"></span>
     <span class="box juice" title="juice"></span>
