feat: add a couple more just for fun

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <span class="box corporate" title="corporate"></span>
     <span class="box peach" title="peach"></span>
     <span class="box yummy" title="yummy"></span>
+    <span class="box political" title="political"></span>
+    <span class="box elmer" title="elmer"></span>
   </div>
 
   <div id="demo" class="windfall"></div>
