feat: add fun theme (thanks Mathieu!)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div>
     <span class="box windfall active" title="windfall"></span>
     <span class="box party" title="party"></span>
+    <span class="box fun" title="fun"></span>
     <span class="box swishy" title="swishy"></span>
     <span class="box sunray" title="sunray"></span>
     <span class="box spotlights" title="spotlights"></span>
